--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     padding: 0;
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
-    transition: 300ms ease-in;
+    transition: 150ms ease-in;
 }
 
 body {
@@ -13,7 +13,8 @@ body {
 }
 
 .hidden {
-    /* visibility: hidden; */
+    visibility: hidden;
+    transition: 0;
 }
 
 
@@ -92,15 +93,12 @@ input::placeholder {
     border-radius: 2px;
     top: 10vh;
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
-    background-color: #dd4e2788;
-    
+    background-color: #dd4e27;
 }
 
 .sub-links a {
-    /* display: block; */
     text-decoration: none;
-    color: #243C7B;
-    color: rgba(255, 255, 255, 0.9)
+    color: rgba(255, 255, 255, 0.9);
 }
 
 /*********************** Hero Section***********************/
