--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ input::placeholder {
     padding: 10px;
     border-radius: 2px;
     top: 10vh;
-    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;  
     background-color: #dd4e27;
 }
 
@@ -135,4 +135,53 @@ input::placeholder {
 
 .hero-section  img {
     width: 30%;
+}
+
+/*********************** Achivement Section***********************/
+
+.achivement {
+    padding: 100px 40px;
+    text-align: center;
+}
+
+.achivement h1 {
+    color: #dd4e27;
+    font-size: 52px;
+    margin-bottom: 50px;
+}
+
+.achivement .cards {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.achivement h3 {
+    font-size: 38px;
+    font-weight: 600;
+}
+
+.achivement h4 {
+    font-size: 18px;
+    font-weight: 600;
+    color: #dd4e27;
+}
+.card {
+    width: 25%;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    height: 350px;
+    border-radius: 100%;
+    padding: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-sizing: border-box;
+}
+
+.card img {
+    width: 90%;
+    padding: 20px;
+    box-sizing: border-box;
+    height: 80%;
 }
