--- a/style.css
+++ b/style.css
@@ -194,14 +194,17 @@ input::placeholder {
 /*********************** Company Section***********************/
 
 .company-section {
-  padding: 60px 40px;
-  background-color: #243c7b22;
+  padding: 80px 40px 40px 40px;
+  background-image: linear-gradient(to right top, #d7d7d799, #243c7b99);
+  clip-path: polygon(0 25%, 100% 0%, 100% 100%, 0 100%);
+  box-sizing: border-box;
 }
 
 .company-section h1 {
   text-align: center;
-  color: #dd4e27;
+  color: #ffffffcc;
   font-size: 52px;
+  padding-top: 10px;
   margin-bottom: 80px;
 }
 
@@ -232,4 +235,141 @@ input::placeholder {
 
 .swiper-pagination {
   top: 150px;
+}
+
+/*********************** Learn Section***********************/
+
+.learn-section {
+  padding: 20px 40px;
+  background-image: linear-gradient(to right, #243c7b 50%, #d7d7d799);
+  text-align: center;
+}
+
+.learn-section h1 {
+  color: #ffffffcc;
+  font-size: 52px;
+  margin: 50px 0 80px 0;
+}
+
+.learn-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.learn-bottom > img {
+  width: 60%;
+  min-height: 600px;
+}
+
+.tab {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 40px;
+  margin-bottom: 35px;
+}
+
+.tab h3 {
+  font-size: 24px;
+  font-weight: 700;
+  color: #dd4e27cc;
+  text-align: start;
+}
+
+.tab h2 {
+  text-align: start;
+  font-size: 28px;
+  font-weight: 600;
+  color: #ffffffcc;
+  margin: 10px 0 0 0;
+}
+
+.learn-bottom .tab > img {
+  width: 25px;
+  align-self: flex-end;
+  padding: 25px 25px;
+  background-color: #dd4e27bb;
+  clip-path: polygon(23% 15%, 100% 15%, 75% 85%, 0 85%);
+  position: relative;
+}
+
+.learn-bottom .tab > img:hover {
+  background-color: #dd4e27;
+  color: #ffffff;
+}
+
+/*********************** Avengers Section***********************/
+
+.avengers-section {
+  padding: 20px 40px;
+  text-align: center;
+}
+
+.avengers-section h1 {
+  color: #dd4e27;
+  font-size: 52px;
+  margin: 50px 0 80px 0;
+  font-weight: 600;
+}
+
+.avengers {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 30px;
+  margin-bottom: 50px;
+}
+
+.aven-card {
+  width: 30%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.aven-card > img {
+  width: 100%;
+  background-image: linear-gradient(to right top, #dd4e2799, #d7d7d799);
+  box-sizing: border-box;
+}
+
+.aven-card > .bottom {
+  background-image: linear-gradient(to right top, #d7d7d799, #243c7b99);
+  padding: 20px;
+  width: 100%;
+  margin-top: -5px;
+  display: inline-block;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.aven-card > .bottom > h5 {
+  font-size: 26px;
+  font-weight: 600;
+  color: #ffffffcc;
+}
+
+.aven-card > .bottom > p {
+  font-size: 20px;
+  letter-spacing: 5px;
+  font-weight: 600;
+  color: #dd4e27;
+  margin: 8px 0;
+}
+
+.avengers-section > a {
+  border: 2px solid #243c7b;
+  display: inline;
+  padding: 6px 35px;
+  color: #243c7b;
+  text-decoration: none;
+  margin: 20px;
+  width: 100%;
+}
+
+.avengers-section > a:hover {
+  background-color: #dd4e27;
+  color: #ffffff;
+  border-color: #dd4e27;
 }
