--- a/responsive.css
+++ b/responsive.css
@@ -1,12 +1,157 @@
-
 @media screen and (max-width: 1200px) {
-    .desktop-nav {
-        visibility: hidden;
-        position: absolute;
-    }
-
-    .mob-navbar {
-        visibility: visible;
-        position: relative;
-    }
+  .desktop-nav {
+    visibility: hidden;
+    position: absolute;
   }
+
+  .mob-navbar {
+    visibility: visible;
+    position: relative;
+  }
+
+  /*********************** Learn Section***********************/
+
+  .learn-bottom {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .learn-bottom > img {
+    width: 100%;
+  }
+
+  .tab h3 {
+    font-size: 20px;
+  }
+
+  .tab h2 {
+    font-size: 24px;
+  }
+
+  .learn-bottom .tab > img {
+    width: 20px;
+  }
+
+  /*********************** Avengers Section***********************/
+
+  .avengers {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    gap: 30px;
+    margin-bottom: 50px;
+  }
+
+  .avengers-section h1 {
+    color: #dd4e27;
+    font-size: 48px;
+    font-weight: 600;
+  }
+
+  .aven-card {
+    width: 50%;
+  }
+
+  .aven-card > .bottom > h5 {
+    font-size: 22px;
+  }
+
+  .aven-card > .bottom > p {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+
+  /*********************** Hero Section***********************/
+
+  .wrapper {
+    display: flex;
+    align-items: center;
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 30px;
+    text-align: center;
+  }
+
+  .text h4 {
+    font-size: 24px;
+    font-weight: 800;
+  }
+
+  .text h1 {
+    font-size: 48px;
+    font-weight: 600;
+  }
+
+  .text p {
+    font-size: 18px;
+  }
+
+  .hero-section img {
+    width: 50%;
+  }
+
+  .achivement .cards {
+    display: flex;
+    gap: 30px;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .achivement h3 {
+    font-size: 30px;
+  }
+
+  .achivement h4 {
+    font-size: 14px;
+    font-weight: 700;
+    color: #dd4e27;
+  }
+
+  .card {
+    width: 60%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-sizing: border-box;
+  }
+
+  .card img {
+    width: 100%;
+    height: 70%;
+  }
+
+  /*********************** Company Section***********************/
+
+  .company-section h1 {
+    margin-top: 20px;
+    font-size: 44px;
+  }
+
+  /*********************** Avengers Section***********************/
+
+  .aven-card {
+    width: 70%;
+  }
+
+  /*********************** Partners Section***********************/
+
+  .partners {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .images {
+    width: 100%;
+  }
+
+
+}
