--- a/style.css
+++ b/style.css
@@ -335,6 +335,8 @@ input::placeholder {
   background-color: #dd4e27;
   color: #ffffff;
   transition: 200ms ease-in;
+  /* transition: .5s ease-in; */
+  transform: scale(1.1);
 }
 
 /*********************** Avengers Section***********************/
