--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,6 @@
 @media screen and (max-width: 1200px) {
+  /*********************** Nav Section***********************/
+
   .desktop-nav {
     visibility: hidden;
     position: absolute;
@@ -65,6 +67,20 @@
 }
 
 @media screen and (max-width: 1000px) {
+
+  /*********************** Nav Section***********************/
+
+  .links > a {
+    visibility: hidden;
+    position: absolute;
+  }
+
+  .user {
+    visibility: visible;
+    position: relative;
+    cursor: pointer;
+  }
+
 
   /*********************** Hero Section***********************/
 
@@ -152,6 +168,4 @@
   .images {
     width: 100%;
   }
-
-
 }
